<resources>
    <string name="app_name">GRS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="car">รถยนต์</string>
    <string name="bicycle">รถจักรยานยนต์</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="text_Fname">ชื่อ</string>
    <string name="text_Lname">นามสกุล</string>
    <string name="todo">TODO</string>
    <string name="txt_owner">รายละเอียดของร้าน</string>
    <string name="txt_idcard">เลขบัตรประชาชน</string>
    <string name="txt_shopname">ชื่อร้านค้า</string>
    <string name="txt_shopdetail">ประเภทของร้านค้า</string>
    <string name="txt_adress">ที่อยู่ของร้านค้า</string>
    <string name="txt_open">เวลาเปิด</string>
    <string name="txt_close">เวลาปิด</string>
    <string name="txt_tel">เบอร์ติดต่อ</string>
    <string name="txt_telgrs">เบอร์ติดต่อ : 062–29496402</string>
    <string name="txt_upload">อัพโหลดรูปภาพ</string>
    <string name="txt_nameimg">: ชื่อรูป</string>
    <string name="txt_nameurl">: ชื่อurl</string>
    <string name="txt_send">ส่งรายละเอียด</string>
    <string name="txt_car">รถยนต์</string>
    <string name="txt_bicycle">รถจักรยานยนต์</string>
    <string name="txt_login">เข้าสู่ระบบ</string>
    <string name="txt_pass">Password</string>
    <string name="txt_face">เข้าสู่ระบบด้วย Facebook</string>
    <string name="txt_and">หรือ</string>
    <string name="txt_loginflase">เข้าสู่ระบบไม่ได้ / ลืมรหัสผ่าน</string>
    <string name="txt_register">สมัครสมาชิก</string>
    <string name="txt_about">ข้อกำหนดการให้บริการ</string>
    <string name="txt_report">คำร้องและความคิดเห็น</string>
    <string name="txt_emailreport">Email สำหรับติดต่อกลับ</string>
    <string name="txt_textreport">คำร้อง / ความคิดเห็น</string>
    <string name="txt_sent">ส่ง</string>
    <string name="txt_garage_repair_shop">Garage Repair Shop</string>
    <string name="txt_lat">ค่าละติจูด</string>
    <string name="txt_lon">ค่าลองติจูด</string>
    <string name="txt_search">Search</string>
    <string name="txt_addshop">เพิ่มสถานที่ร้านของคุณ</string>
    <string name="txt_email">Email</string>
    <string name="txt_ser">การใช้บริการของเรา</string>
    <string name="txt_abo">ข้อกำหนดของเรา</string>
    <string name="txt_emailth">อีเมล</string>
    <string name="txt_0">0</string>
    <string name="txt_letgo">นำทาง</string>
    <string name="txt_type">ประเภทร้านค้า</string>
    <string name="txt_nameshop">ชื่อร้าน</string>
    <string name="txt_repassword">เปลี่ยนรหัสผ่าน</string>
    <string name="title_activity_mapstest">Map</string>
    <string name="txt_conrepass">ยืนยันการเปลี่ยนรหัสผ่าน</string>
    <string name="txt_checkselect">เช็คselect</string>
    <string name="txt_nameapp">แอปพลิเคชันค้นหาร้านซ่อมรถ</string>
    <string name="txt_car4">ร้านซ่อมรถยนต์-เครื่องยนต์</string>
    <string name="txt_car3">ร้านซ่อมรถยนต์-กระจกรถยนต์</string>
    <string name="txt_car2">ร้านซ่อมรถยนต์-พ่นสี</string>
    <string name="txt_car1">ร้านซ่อมรถยนต์-ยาง</string>
    <string name="txt_namemark">เพิ่มพิกัดร้านซ่อมรถบนแผนที่</string>
    <string name="txt_clickmap">*กรุณากดที่รูปแผนทีด้านขวา่</string>
    <string name="txt_conpass">Confirmpassword</string>

</resources>
