<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/txt_login"
            android:icon="@drawable/login"
            android:title="@string/txt_addshop" />

    </group>
    <item android:title="">
        <menu>

            <item
                android:id="@+id/txt_report"
                android:icon="@drawable/megaphone"
                android:title="@string/txt_report" />
            <item
                android:id="@+id/txt_about"
                android:icon="@drawable/analysis"
                android:title="@string/txt_about" />
        </menu>
    </item>

</menu>
