<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <!-- Login progress -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/close"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/arrow"
                    />

                <TextView
                    android:id="@+id/txt_app"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:text="@string/txt_nameapp"
                    android:textSize="33sp" />

            </LinearLayout>

        </android.support.design.widget.AppBarLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="@string/txt_about"
        android:textSize="28sp"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ser"
                android:textSize="22sp" />

            <ListView
                android:id="@+id/listView1"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:ignore="NestedScrolling"
                android:divider="@null">

            </ListView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/txt_abo"
                android:textSize="22sp" />
            <ListView
                android:paddingTop="10dp"
                android:id="@+id/listView2"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:ignore="NestedScrolling"
                android:divider="@null">

            </ListView>

        </LinearLayout>
    </ScrollView>

    <!-- Login progress -->

</LinearLayout>