<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".LoginActivity"
        tools:ignore="UselessParent">

        <!-- Login progress -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/close"
                        android:layout_width="25dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/arrow"
                        />

                    <TextView
                        android:id="@+id/txt_app"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="15dp"
                        android:text="@string/txt_nameapp"
                        android:textSize="33sp" />

                </LinearLayout>

            </android.support.design.widget.AppBarLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            tools:context=".LoginActivity">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:id="@+id/txt_img"
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/korkai" />

                    <TextView
                        android:id="@+id/txt_shopname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:text="@string/txt_nameshop"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/todo"
                            android:paddingStart="5dp"
                            android:paddingEnd="2dp"
                            app:srcCompat="@drawable/category" />

                        <TextView
                            android:id="@+id/txt_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="20dp"
                            android:paddingEnd="15dp"
                            android:text="@string/txt_type"
                            android:textSize="18sp"
                            tools:ignore="NestedWeights" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/todo"
                            android:paddingStart="5dp"
                            android:paddingEnd="2dp"
                            app:srcCompat="@drawable/mark" />

                        <TextView
                            android:id="@+id/txt_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="20dp"
                            android:paddingEnd="15dp"
                            android:text="@string/txt_adress"
                            android:textSize="18sp"
                            tools:ignore="NestedWeights" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/todo"
                            android:paddingStart="5dp"
                            android:paddingEnd="2dp"
                            app:srcCompat="@drawable/time" />

                        <TextView
                            android:id="@+id/txt_timeop"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="20dp"
                            android:text="@string/txt_open"
                            android:textSize="18sp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/txt_timecl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="5dp"
                            android:paddingEnd="15dp"
                            android:text="@string/txt_close"
                            android:textSize="18sp"
                            tools:ignore="NestedWeights" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/todo"
                            android:paddingStart="5dp"
                            android:paddingEnd="2dp"
                            app:srcCompat="@drawable/phone" />

                        <TextView
                            android:id="@+id/txt_tel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="20dp"
                            android:paddingEnd="15dp"
                            android:text="@string/txt_tel"
                            android:textSize="18sp"
                            tools:ignore="NestedWeights" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:id="@+id/txt_lat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="5dp"
                            android:paddingEnd="15dp"
                            android:text="@string/txt_lat"
                            android:textSize="12sp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/txt_latmy"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="5dp"
                            android:paddingEnd="15dp"
                            android:text="@string/txt_lat"
                            android:textSize="22sp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/txt_lonmy"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="5dp"
                            android:paddingEnd="15dp"
                            android:text="@string/txt_lat"
                            android:textSize="22sp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/txt_lon"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="5dp"
                            android:paddingEnd="15dp"
                            android:text="@string/txt_lon"
                            android:textSize="12sp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/txt_nameurl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="5dp"
                            android:paddingEnd="15dp"
                            android:text="@string/txt_nameurl"
                            android:textSize="1sp"
                            tools:ignore="NestedWeights,SmallSp" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/btn_letgo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="56dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="20dp"
                        android:background="@android:color/holo_green_dark"
                        android:text="@string/txt_letgo"
                        android:textStyle="bold" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>